# Python_Professional_OTUS

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
01_new_project/: .pre-commit-config.yaml  pyproject.toml
01_new_project/log_analyzer/: __init__.py  log_analyzer.py
01_new_project/project/: main.py
01_new_project/reports/: report.html
01_new_project/tests/: conftest.py  test_log_analyzer.py
HTTP_server/: README.md
api_testing/: README.md  api.py  common.py  scoring.py  store.py  test.py
api_testing/tests/: conftest.py
api_testing/tests/unit/: test_api.py  test_scoring.py
asyncio/: README.md  crawler.py
auth/: .dockerignore  Dockerfile  README.md  main.py
clean_warehouse/: README.md  pyproject.toml
clean_warehouse/src/warehouse/application/: dtos.py  uow.py  use_cases.py
clean_warehouse/src/warehouse/domain/: errors.py  model.py
clean_warehouse/src/warehouse/infrastructure/: schema.py  sql_repositories.py  sql_uow.py
clean_warehouse/src/warehouse/preserntation/: flask_app.py
clean_warehouse/tests/: test_place_order_sqlite.py  test_place_order_unit.py
django/django_blog/templates/blog/: add_post.html  post_delete.html  post_detail.html  post_list.html
django/django_blog_fixed/: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
django/django_blog_fixed/blog/: admin.py  forms.py  models.py  urls.py  views.py
django/django_blog_fixed/blog/migrations/: 0001_initial.py
django/django_blog_fixed/blog/tests/: test_crud.py  test_forms.py  test_views.py
django/django_blog_fixed/django_blog/: asgi.py  wsgi.py
django/django_blog_fixed/django_blog/settings/: __init__.py  base.py  local.py  prod.py  test.py
django/django_blog_fixed/docker-build/blog/: Dockerfile
django/django_blog_fixed/templates/: base.html  index.html  menu.html
django/django_blog_fixed/templates/blog/: edit_post.html  post_delete.html  post_detail.html  post_list.html
fastapi/: DockerCompose.yaml  Dockerfile  README.md  main.py
go/: README.md  go.mod  memc_load.go
log_analyzer/: README.md  pyproject.toml
log_analyzer/config/: config.json
log_analyzer/homework/: lecture.ipynb
log_analyzer/log/: log.json
log_analyzer/log_analyzer/: __init__.py  log_analyzer.py
log_analyzer/project/src/app/: module.py
log_analyzer/tests/: conftest.py  test_log_analyzer.py
multithreading/: README.md  memc_load_hw.py  test_memc_load_hw.py
numpy/: logistic_regression_filled.py
otus_gpt/: README.md
otus_gpt/data/: sample_train.jsonl  sample_val.jsonl
otus_gpt/scripts/: inference.py  train_qlora.py
scoring_api/homework/: README.md  api.py  common.py  gpt.py
some_shit/: test_shit.py
type_annotations_challenge/: advanced.py  basic.py  extreme.py  intermediate.py  lecture.ipynb
